@@ -1,2 +1,2 @@
 Search In QT5 API's
-./searchqt5api
+./searchqt5apis
