@@ -1,2 +1,2 @@
 Search In QT6 API's
-./searchqt6api
+./searchqt6apis
