@@ -1,39 +1,0 @@
-#!/bin/bash
-
-runitx ()
-{
-	cnt=0
-	while read
-		do
-			if [ $cnt -eq 0 ];then
-				echo "${REPLY}<br>"
-				cnt=1
-			else
-				read NAME
-				echo "<a href=\"""$REPLY""\">""$NAME""</a><br>"
-			fi
-		done< <($1 $2)
-}
-
-cat >$2<<EOF
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html"; charset=UTF-8>
-</head>
-<body>
-$(
-	while read ans
-		do
-			if [ ! "X$(sed -n 2p $ans)" = "X$0" ];then
-				echo "$(runitx "$(sed -n 2p $ans)" "$1")"
-				echo "<br>"
-			fi
-	done< <(find -iname "*.info"|sort -V)
-)
-</body>
-</html>
-EOF
-
-echo "Just Open"
-exit 0
